<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rowCompras"
    android:layout_marginTop="-1dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <RelativeLayout
        android:id="@+id/bannerPs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blanco"
        >

        <LinearLayout
            android:id="@+id/thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingBottom="2dp"
            android:paddingTop="2dp" >


            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/LogoCasa"
                android:src="@drawable/message_icon"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutNombreUsuario"
            android:layout_toRightOf="@id/thumbnail"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_margin="5dp"
                    android:textColor="@color/negro"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/usuario"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_margin="5dp"
                    android:textColor="@color/negro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txtNombreUsuario"
                    android:text="2-35"
                    />


            </LinearLayout>
        </LinearLayout>
 <LinearLayout
            android:id="@+id/LayoutTipoMensaje"

            android:layout_below="@id/LayoutNombreUsuario"
     android:layout_toRightOf="@id/thumbnail"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_margin="5dp"
                    android:textColor="@color/negro"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tipo_mensaje"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_margin="5dp"
                    android:textColor="@color/negro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txtTipoMensaje"
                    android:text="2-35"
                    />


            </LinearLayout>



        </LinearLayout>



        <LinearLayout
            android:id="@+id/layoutMensaje"
            android:layout_marginLeft="15dp"
            android:layout_below="@id/LayoutTipoMensaje"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/thumbnail"
            android:layout_toEndOf="@+id/thumbnail">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/negro"
                android:text="@string/mensaje"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_margin="5dp"
                    android:textColor="@color/negro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txtMEnsaje"
                    android:text="2-35"
                    />


            </LinearLayout>



        </LinearLayout>

    </RelativeLayout>



    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/verdeBolsaClaro">
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@id/bannerPs"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/verdeBolsaClaro">
    </RelativeLayout>
</RelativeLayout>